Added Ashen Wood Log Rotation/ Added Ashenwood planks and slabs. Ashenwood Crafting and mining currently are operational.

--- a/src/main/resources/assets/havenoxsmp/lang/en_us.json
+++ b/src/main/resources/assets/havenoxsmp/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "block.havenoxsmp.ashenwood_log": "Ashenwood Log",
-  "itemgroup.ashenwood": "Ashenwood Blocks"
+  "block.havenoxsmp.ashenwood_planks": "Ashenwood Planks",
+  "block.havenoxsmp.ashenwood_slab": "Ashenwood Slab"
+
 }
