Updated Wisteria Door Textures

--- a/src/main/resources/assets/havenoxsmp/lang/en_pt.json
+++ b/src/main/resources/assets/havenoxsmp/lang/en_pt.json
@@ -1,5 +1,7 @@
 {
   "block.havenoxsmp.ashenwood_log": "Log o' Fire",
+  "block.havenoxsmp.stripped_ashenwood_log": "Bare Log o' Fire",
+  "block.havenoxsmp.stripped_ashenwood": "Bare Ashenwood Timber",
   "block.havenoxsmp.ashenwood_planks": "Planks o' Fire",
   "block.havenoxsmp.ashenwood_slab": "Slab o' Fire",
   "block.havenoxsmp.ashenwood_stairs": "Stairs o' Fire",
@@ -8,9 +10,40 @@
   "block.havenoxsmp.ashenwood_fence": "Picket o' Fire",
   "block.havenoxsmp.ashenwood_fence_gate": "Picket Gate o' Fire",
   "block.havenoxsmp.ashenwood_door": "Door o' Fire",
-  "block.havenoxsmp.ashenwood_trapdoor": "Hatchet o' Fire",
-  "block.havenoxsmp.ashenwood": "Ashenwood Timber",
+  "block.havenoxsmp.ashenwood_trapdoor": "Hatch o' Fire",
+  "block.havenoxsmp.ashenwood": "Fire Timber",
+  "block.havenoxsmp.zephyrwood": "Wind Timber",
+  "block.havenoxsmp.stripped_zephyrwood_log": "Bare Log o' Wind",
+  "block.havenoxsmp.stripped_zephyrwood": "Bare Wind Timber",
+  "block.havenoxsmp.zephyrwood_log": "Log o' Wind",
+  "block.havenoxsmp.zephyrwood_planks": "Planks o' Wind",
+  "block.havenoxsmp.zephyrwood_slab": "Slab o' Wind",
+  "block.havenoxsmp.zephyrwood_stairs": "Stairs o' Wind",
+  "block.havenoxsmp.zephyrwood_button": "Knob o' Wind",
+  "block.havenoxsmp.zephyrwood_pressure_plate": "Booby Trap o' Wind",
+  "block.havenoxsmp.zephyrwood_fence": "Picket o' Wind",
+  "block.havenoxsmp.zephyrwood_fence_gate": "Picket Gate o' Wind",
+  "block.havenoxsmp.zephyrwood_door": "Door o' Wind",
+  "block.havenoxsmp.zephyrwood_trapdoor": "Hatch o' Wind",
+  "block.havenoxsmp.wisteria_wood": "Wisteria Timber",
 
+  "block.havenoxsmp.wisteria_log": "Wisteria Log",
+  "block.havenoxsmp.wisteria_planks": "Wisteria Planks",
+  "block.havenoxsmp.wisteria_slab": "Wisteria Slab",
+  "block.havenoxsmp.wisteria_stairs": "Wisteria Stairs",
+  "block.havenoxsmp.wisteria_button": "Wisteria Button",
+  "block.havenoxsmp.wisteria_pressure_plate": "Wisteria Pressure Plate",
+  "block.havenoxsmp.wisteria_fence": "Wisteria Fence",
+  "block.havenoxsmp.wisteria_fence_gate": "Wisteria Fence Gate",
+  "block.havenoxsmp.wisteria_door": "Wisteria Door",
+  "block.havenoxsmp.wisteria_trapdoor": "Wisteria Trapdoor",
+
+  "item.havenoxsmp.ashenwood_rod": "Piece o' Fire",
+  "item.havenoxsmp.ashenwood_waster": "Cutlass o' Fire",
+  "item.havenoxsmp.ashenwood_pickaxe": "Pickaxe o' Fire",
+  "item.havenoxsmp.ashenwood_hatchet": "Hatchet o' Fire",
+  "item.havenoxsmp.ashenwood_spade": "Spade o' Fire",
+  "item.havenoxsmp.ashenwood_hoe": "Farmin' Stick o' Fire",
   "item.havenoxsmp.recall_scroll": "Magic Scroll o' Origins",
   "item.havenoxsmp.hamburger": "Beef Samich"
 }
