Bug Fix To Ashenwood Crafting Table with GUI issues Currently working on Crafting Issues with custom crafting tables

--- a/src/main/resources/assets/havenoxsmp/lang/en_us.json
+++ b/src/main/resources/assets/havenoxsmp/lang/en_us.json
@@ -12,8 +12,10 @@
   "block.havenoxsmp.ashenwood_fence_gate": "Ashenwood Fence Gate",
   "block.havenoxsmp.ashenwood_door": "Ashenwood Door",
   "block.havenoxsmp.ashenwood_trapdoor": "Ashenwood Trapdoor",
+  "block.havenoxsmp.ashenwood_crafting_table": "Ashenwood Crafting Table",
   "block.havenoxsmp.wisteria_wood": "Wisteria Wood",
-
+  "block.havenoxsmp.stripped_wisteria_log": "Stripped Wisteria Log",
+  "block.havenoxsmp.stripped_wisteria_wood": "Stripped Wisteria Wood",
   "block.havenoxsmp.wisteria_log": "Wisteria Log",
   "block.havenoxsmp.wisteria_planks": "Wisteria Planks",
   "block.havenoxsmp.wisteria_slab": "Wisteria Slab",
@@ -24,6 +26,8 @@
   "block.havenoxsmp.wisteria_fence_gate": "Wisteria Fence Gate",
   "block.havenoxsmp.wisteria_door": "Wisteria Door",
   "block.havenoxsmp.wisteria_trapdoor": "Wisteria Trapdoor",
+  "block.havenoxsmp.wisteria_leaves": "Wisteria Leaves",
+  "block.havenoxsmp.wisteria_sapling": "Wisteria Sapling",
   "block.havenoxsmp.zephyrwood": "Zephyrwood",
   "block.havenoxsmp.stripped_zephyrwood_log": "Stripped Zephyrwood Log",
   "block.havenoxsmp.stripped_zephyrwood": "Stripped Zephyrwood",
